--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     restart: always
     environment:
       MYSQL_USER: 'grupo16'
-      MYSQL_ROOT_PASSWORD: '1234'
+      MYSQL_PASSWORD: '1234'
     networks:
       - red-db
   #Servidores escritos en flask
