--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     environment:
       MYSQL_USER: 'grupo16'
       MYSQL_PASSWORD: '1234'
+      MYSQL_ROOT_PASSWORD: '1234'
     networks:
       - red-db
   #Servidores escritos en flask
