--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     environment:
       MYSQL_USER: 'grupo16'
       MYSQL_ROOT_PASSWORD: '1234'
+    ports:
+      - "3306:3306"
     networks:
       - red-db
   #Servidores escritos en flask
